--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Environment Variables
-VITE_API_URL=http://localhost/app_pertanahan/api
+VITE_API_URL=http://localhost:5137
 VITE_APP_NAME=Aplikasi Pertanahan
