--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-leaflet": "^5.0.0",
