--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-pertanahan",
-  "homepage": "https://github.com/andrymamboro/SIGATAN",
+  "homepage": "https://andrymamboro.github.io/SIGATAN/",
   "version": "1.0.0",
   "description": "Aplikasi Manajemen Data Pertanahan",
   "type": "module",
